plugins {
    id 'java'
    id 'war'
}

group 'com.kbank'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.9.2'
    springVersion = '6.1.5'
    securityVersion = '6.1.4'
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

configurations {
    configureEach {
        exclude group: 'commons-logging', module: 'commons-logging'
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

dependencies {

    /*** Spring ***/
    implementation ("org.springframework:spring-context:${springVersion}") {
        exclude group: 'commons-logging', module: 'commons-logging'
    }

    implementation ("org.springframework:spring-webmvc:${springVersion}"){
        exclude group: 'commons-logging', module: 'commons-logging'
    }

    implementation "org.springframework:spring-web:${springVersion}"
    implementation 'jakarta.inject:jakarta.inject-api:2.0.1'

    /*** Spring Security ***/
    implementation "org.springframework.security:spring-security-core:${securityVersion}"
    implementation "org.springframework.security:spring-security-web:${securityVersion}"
    implementation "org.springframework.security:spring-security-config:${securityVersion}"

    /*** JWT ***/
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    /*** JSON Parsing ***/
    implementation 'com.google.code.gson:gson:2.8.9'
    implementation "com.fasterxml.jackson.core:jackson-core:2.15.0"
    implementation "com.fasterxml.jackson.core:jackson-annotations:2.15.0"
    implementation "com.fasterxml.jackson.core:jackson-databind:2.15.0"
    // implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.15.0"
    implementation "net.minidev:json-smart:2.4.10"
    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310"

    /*** JSP, SERVLET, JSTL ***/
    implementation 'jakarta.servlet:jakarta.servlet-api:5.0.0'
    implementation 'jakarta.servlet.jsp:jakarta.servlet.jsp-api:3.1.0'
    implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl:2.0.0'

    /*** MyBatis ***/
    implementation 'org.springframework:spring-jdbc:6.0.12'
    implementation 'org.mybatis:mybatis:3.5.10'
    implementation 'org.mybatis:mybatis-spring:3.0.3'
    runtimeOnly 'mysql:mysql-connector-java:8.0.28'
    implementation 'org.apache.commons:commons-dbcp2:2.9.0'

    /*** JPA & Hibernate ***/
    implementation 'org.springframework.data:spring-data-jpa:3.2.1'
    implementation 'org.hibernate.orm:hibernate-core:6.2.7.Final'

    /*** AOP ***/
    implementation 'org.aspectj:aspectjrt:1.9.20'
    implementation 'org.aspectj:aspectjweaver:1.9.20'

    /*** Validation ***/
    implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
    implementation 'jakarta.validation:jakarta.validation-api:3.0.2'

    /*** Logging ***/
    implementation 'ch.qos.logback:logback-classic:1.4.12'
    implementation 'org.slf4j:slf4j-api:2.0.3'

    /*** Lombok ***/
    compileOnly 'org.projectlombok:lombok:1.18.28'
    annotationProcessor 'org.projectlombok:lombok:1.18.28'

    /*** Annotation ***/
    implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'

    /*** Connection Pool ***/
    implementation 'com.zaxxer:HikariCP:5.0.1'

    /*** XML 한글 처리 ***/
    implementation 'xerces:xercesImpl:2.12.2'

    /*** RestTemplate TimeOut 처리를 위한 의존성 ***/
    implementation 'org.apache.httpcomponents.client5:httpclient5:5.2.1'


    /*** Test ***/
    testImplementation "org.springframework:spring-test:${springVersion}"
    testCompileOnly 'org.projectlombok:lombok:1.18.28'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.28'
    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
}

test {
    useJUnitPlatform()
}

